# php-whaaa

./: .gitignore  Makefile  flake.nix
go/: default.pgo  go.mod  go.sum  main.go
php/: index.php
php-fast/: index.php
rust/: Cargo.toml
rust/src/: main.rs
