[package]
name = "php-whaaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http-body-util = "0.1.0-rc.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
titlecase = "2.2.1"
tokio = { version = "1", features = ["full"] }
